Fix styling and comment width on small screen

--- a/webcompat/static/css/development/components/comment.css
+++ b/webcompat/static/css/development/components/comment.css
@@ -107,8 +107,10 @@
   .wc-Comment-header {
     border-radius: 10px 10px 0 0;
     background-color: #f0f0f0;
-    padding: .8em 0 .8em 1em;
+    padding: .8em .8em .8em 1em;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .wc-Comment-header-spacing {
@@ -167,5 +169,5 @@
   /* QR */
   .wc-Comment-qr {
     z-index: 1;
-    margin: -6px 16px 0 auto;
+    margin-left: auto;
   }
